[project]
name = "job-board-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "argparse>=1.4.0",
    "discord-py>=2.4.0",
    "dotenv>=0.9.9",
    "firecrawl-py>=4.30.1",
    "instructor>=1.15.3",
    "pydantic>=2.13.4",
    "typing>=3.10.0.0",
]
